# Petri_analysis

./: .gitignore  README.md  main.py  pyproject.toml
analyze/: preprocessing.ipynb  protocol.md
test/: Untitled-1.ipynb  Untitled-1.py  analyse.ipynb  test1.py
