[project]
name = "petri-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "marimo>=0.15.3",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "plotly>=6.3.0",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
